# xarray-graph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-test.yml  build.yml  publish.yml  test.yml
examples/: GOLabChart.mat  WinWCP.wcp
src/pyqt_xarray_graph/: PyQtXarrayGraph.py  __init__.py
src/pyqt_xarray_xydataviewer/: PyQtXarrayXYDataViewer.py  __init__.py
src/xarray_graph/: AbstractTreeItem.py  AbstractTreeModel.py  AnnotationTreeItem.py  AnnotationTreeView.py  CollapsibleSectionsSplitter.py  IPythonConsole.py  RegionsManager.py  TreeItem.py  TreeView.py  XarrayDataTreeDebugView.py  XarrayDataTreeModel.py  XarrayDataTreeView.py  XarrayDataTreeViewer.py  XarrayGraph copy.py  XarrayGraph.py  XarrayTreeModel.py  XarrayTreeView.py  XarrayTreeViewer.py  __init__.py  __main__.py  io.py  xarray_utils.py
src/xarray_graph/apps/: XarrayDataTreeViewer.py  XarrayGraph.py  __init__.py  __main__.py
src/xarray_graph/graph/: AxisRegion.py  CurveFitControlPanel.py  Figure.py  FilterControlPanel.py  InfiniteLine.py  MeasureControlPanel.py  Plot.py  PlotCurve.py  PlotGrid.py  View.py  XarrayGraph.py  __init__.py  __main__.py
src/xarray_graph/graph/pyqtgraph_ext/: Plot.py  PlotGrid.py  __init__.py
src/xarray_graph/io/: __init__.py  adicht2mat.m  golab_tev_adicht2mat.m  heka.py  heka_reader.py  io.py  labchart.py  read_adicht_mat.py  read_golab_tev_adicht_mat.py  read_winwcp.py  winwcp.py
src/xarray_graph/tmp/: AbstractTreeModel.py  Annotation.py  AnnotationTreeModel.py  CurveFitControlPanel.py  FilterControlPanel.py  IPythonConsole.py  KeyValueTreeModel.py  KeyValueTreeView OLD.py  MeasureControlPanel.py  XarrayDataTreeDebugView.py  XarrayDataTreeItem2.py  XarrayDataTreeModel.py  XarrayDataTreeView.py  XarrayDataTreeViewer.py  XarrayDataTreeWindow.py  XarrayGraph copy.py  XarrayGraph.py  XarrayGraph_OLD.py  _OLD_io.py
src/xarray_graph/tmp/pyqtgraph_ext/: AxisRegion.py  Figure.py  Graph.py  GraphStyle.py  View.py
src/xarray_graph/tree/: AbstractTreeItem.py  AbstractTreeModel.py  AnnotationTreeItem.py  AnnotationTreeModel.py  AnnotationTreeView.py  KeyValueTreeItem.py  KeyValueTreeModel.py  KeyValueTreeView.py  TreeView.py  XarrayDataTreeItem.py  XarrayDataTreeModel.py  XarrayDataTreeView.py  XarrayDataTreeViewer.py  XarrayTreeModel.py  XarrayTreeView.py  XarrayTreeViewer.py  __init__.py  __main__.py
src/xarray_graph/utils/: Annotation.py  IPythonConsole.py  WindowManager.py  __init__.py  color.py  xarray_utils.py
src/xarray_graph/widgets/: CollapsibleSectionsSplitter.py  ColorButton.py  IPythonConsole.py  MultiValueSpinBox.py  TableWidgetWithCopyPaste.py  __init__.py
tests/: test_example.py
