[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "xarray-graph"
description = "PyQt UI for navigating and graphing (x,y) slices of a Xarray DataTree."
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "xarray>=2025.3.1",
    "pint",
    "zarr",
    "lmfit>=1.2.2",
    "QtPy>=2.4.1",
    "QtAwesome>=1.4.0",
    "pyqtgraph>=0.13.3",
    "pyqt-ext>=2025.6.18.2",
    "qtconsole>=5.5.2",
]
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
readme = "README.md"
keywords = ["PyQt", "PySide", "xarray", "graph", "tree", "plot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
PySide6 = [
    "PySide6>=6.9",
]


[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/xarray-graph"
repository = "https://github.com/marcel-goldschen-ohm/xarray-graph"
issues = "https://github.com/marcel-goldschen-ohm/xarray-graph/issues"


[project.scripts]
xarray-graph = "xarray_graph.__main__:main"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"
