[project]
name = "xarray-graph"
version = "v2025.11.12"
description = "PyQt UI for navigating and graphing (x,y) slices of a Xarray DataTree."
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
readme = "README.md"
keywords = ["PyQt", "PySide", "xarray", "graph", "tree", "plot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
    "xarray >=2025.3.1",
    "h5netcdf",
    "zarr",
    "scipy",
    "pint",
    "lmfit",
    "QtPy",
    "QtAwesome",
    "pyqtgraph",
    "pyqt-ext >=2025.11.12",
    "qtconsole",
    "cmap",
    "requests",
]

[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/xarray-graph"
repository = "https://github.com/marcel-goldschen-ohm/xarray-graph"
issues = "https://github.com/marcel-goldschen-ohm/xarray-graph/issues"

[project.scripts]
xarray-graph = "xarray_graph.__main__:graph_app"
xarray-tree = "xarray_graph.__main__:tree_app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
