[project]
name = "xarray-graph"
version = "v2026.7.1"
description = "PyQt UIs for Xarray DataTree including tree view and DataArray slice graphing and processing."
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
readme = "README.md"
keywords = ["xarray", "DataTree", "tree", "PyQt", "PySide", "pyqtgraph", "graph", "plot", "signal processing", "n-dimensional"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
    "xarray >=2025.3.1",
    "h5netcdf",
    "zarr",
    "scipy",
    "pint",
    "lmfit",
    "QtPy",
    "QtAwesome",
    "pyqtgraph",
    "qtconsole",
    "cmap",
    "requests",
    "pint-xarray>=0.5.1",
    "cf-xarray>=0.10.6",
]

[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/xarray-graph"
repository = "https://github.com/marcel-goldschen-ohm/xarray-graph"
issues = "https://github.com/marcel-goldschen-ohm/xarray-graph/issues"

[project.scripts]
xarray-graph = "xarray_graph.__main__:xgraph"
xarray-tree = "xarray_graph.__main__:xtree"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
